--- a/SimpleTalk/SimpleTalk.csproj
+++ b/SimpleTalk/SimpleTalk.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8D3D7248-4628-4AF1-BD8C-E876D5380936}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -48,12 +48,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GUI\AbcKeyboard.cs" />
+    <Compile Include="GUI\AbcKeyboard.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GUI\ControlsKeyboard.cs" />
     <Compile Include="GUI\CustomButtonEvent.cs" />
     <Compile Include="GUI\CustomForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\CustomKeyboard.cs" />
+    <Compile Include="GUI\frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +81,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GUI\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
