=== GUI as demonstrated to Joost on 13-11-2009 === === Used custom 3 button: thumb (pres = scan), forefinger (up = "yes.wav" / down = "no.wav") === + Disabled database actions by define in AutoComplete.cs * Set connection string back to defined string instead of hard connection string * Increase button size * Made some small changes to the main form * Increase button font

--- a/SimpleTalk/app.config
+++ b/SimpleTalk/app.config
@@ -16,7 +16,7 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-    <add name="AutoComplete" connectionString="Data Source=PRODRIVE_BOXPC\SQLEXPRESS;Initial Catalog=AutoComplete;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="AutoComplete" connectionString="Data Source=S071241\SQLEXPRESS;Initial Catalog=AutoComplete;User ID=sa;Password=Power_up10" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
