--- a/trunk/SimpleTalk/app.config
+++ b/trunk/SimpleTalk/app.config
@@ -16,7 +16,7 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-    <add name="AutoComplete" connectionString="Data Source=PRODRIVE_BOXPC\SQLEXPRESS;Initial Catalog=AutoComplete;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="AutoComplete" connectionString="Data Source=S071241\SQLEXPRESS;Initial Catalog=AutoComplete;User ID=sa;Password=Power_up10" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
