--- a/trunk/SimpleTalk/SimpleTalk.csproj
+++ b/trunk/SimpleTalk/SimpleTalk.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8D3D7248-4628-4AF1-BD8C-E876D5380936}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -154,8 +154,12 @@
     <None Include="app.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="AudioFiles\Ja.wav" />
-    <None Include="AudioFiles\Nee.wav" />
+    <None Include="AudioFiles\Ja.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="AudioFiles\Nee.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Diagrams\Forms.cd" />
     <None Include="Diagrams\Keyboard.cd" />
     <None Include="Properties\Settings.settings">
