--- a/trunk/SimpleTalk/SimpleTalk.csproj
+++ b/trunk/SimpleTalk/SimpleTalk.csproj
@@ -56,7 +56,6 @@
       <HintPath>Assemblies\Interop.WMPLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -77,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess\AutoWords.cs" />
+    <Compile Include="DataAccess\Database.cs" />
     <Compile Include="DataAccess\NextWords.cs" />
     <Compile Include="GUI\Beheaviour\CustomBeheaviour.cs" />
     <Compile Include="GUI\Beheaviour\ICustomBeheaviour.cs" />
