+ Settings are saved for next session * Changed setting buttons text to upper case in frmSettings * Changed "auto" to ">>" and "back" to "<=" on abc keyboard - Removed: minimize, maximize and controlBox from frmSettings * Changed settings text font in frmSettings to "Consolas;45pt;style=bold"

--- a/SimpleTalk/SimpleTalk.csproj
+++ b/SimpleTalk/SimpleTalk.csproj
@@ -138,6 +138,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="AudioFiles\Ja.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
