--- a/SimpleTalk/SimpleTalk.csproj
+++ b/SimpleTalk/SimpleTalk.csproj
@@ -88,7 +88,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="GUI\Layouts\AutoCompleteLayout.cs" />
-    <Compile Include="GUI\Layouts\ButtoDefinition.cs" />
+    <Compile Include="GUI\Layouts\ButtonDefinition.cs" />
     <Compile Include="GUI\Layouts\SettingsLayout.cs" />
     <Compile Include="GUI\CustomButtonEvent.cs" />
     <Compile Include="GUI\CustomForm.cs">
