* Changed form and button settings to fit on resolution 1366*768 NOTE THAT THIS IS ALWAYS DONE NICELY

--- a/SimpleTalk/SimpleTalk.csproj
+++ b/SimpleTalk/SimpleTalk.csproj
@@ -121,6 +121,9 @@
     <EmbeddedResource Include="GUI\frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Keyboard\MostButton.resx">
+      <DependentUpon>MostButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
