--- a/trunk/SimpleTalk/Properties/Settings.settings
+++ b/trunk/SimpleTalk/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="scanSpeed" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="yesNoDisplayTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">500</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
