--- a/trunk/SimpleTalk/app.config
+++ b/trunk/SimpleTalk/app.config
@@ -16,6 +16,9 @@
             <setting name="scanSpeed" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="yesNoDisplayTime" serializeAs="String">
+                <value>500</value>
+            </setting>
         </SimpleTalk.Properties.Settings>
     </userSettings>
 </configuration>
