--- a/SimpleTalk/app.config
+++ b/SimpleTalk/app.config
@@ -19,6 +19,9 @@
             <setting name="yesNoDisplayTime" serializeAs="String">
                 <value>1200</value>
             </setting>
+            <setting name="UnderscoreSpace" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SimpleTalk.Properties.Settings>
     </userSettings>
 </configuration>
