--- a/trunk/SimpleTalk/Properties/Settings.settings
+++ b/trunk/SimpleTalk/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="UnderscoreSpace" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="UseAbcLayoutWithAutoComplete" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
