--- a/trunk/SimpleTalk/app.config
+++ b/trunk/SimpleTalk/app.config
@@ -22,6 +22,9 @@
             <setting name="UnderscoreSpace" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UseAbcLayoutWithAutoComplete" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SimpleTalk.Properties.Settings>
     </userSettings>
 </configuration>
