* Added autocomplete in new Abclayout * Fixed: "After selecting no delay is added to the first line."

--- a/SimpleTalk/app.config
+++ b/SimpleTalk/app.config
@@ -22,6 +22,9 @@
             <setting name="UnderscoreSpace" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UseAbcLayoutWithAutoComplete" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SimpleTalk.Properties.Settings>
     </userSettings>
 </configuration>
