mouse speed decreased

--- a/PS3 controller/Joy2Key/PS3.cfg
+++ b/PS3 controller/Joy2Key/PS3.cfg
@@ -7,18 +7,18 @@ UsePOV=1
 Threshold=200
 KeySendMode=0
 [Joystick 1]
-Axis1n=2,-100,   0,   0, 0, 0, 0,  0
-Axis1p=2, 100,   0,   0, 0, 0, 0,  0
-Axis2n=2,   0,-100,   0, 0, 0, 0,  0
-Axis2p=2,   0, 100,   0, 0, 0, 0,  0
-Axis3n=2,   0, 100,   0, 0, 0, 0,  0
-Axis3p=2,   0,-100,   0, 0, 0, 0,  0
+Axis1n=2, -20,   0,   0, 0, 0, 0,  0
+Axis1p=2,  20,   0,   0, 0, 0, 0,  0
+Axis2n=2,   0, -20,   0, 0, 0, 0,  0
+Axis2p=2,   0,  20,   0, 0, 0, 0,  0
+Axis3n=2,   0,  20,   0, 0, 0, 0,  0
+Axis3p=2,   0, -20,   0, 0, 0, 0,  0
 Axis4n=0
-Axis4p=2, 100,   0,   0, 0, 0, 0,  0
-Axis5n=2,-100,   0,   0, 0, 0, 0,  0
+Axis4p=2,  20,   0,   0, 0, 0, 0,  0
+Axis5n=2, -20,   0,   0, 0, 0, 0,  0
 Axis5p=0
-Axis6n=2,-100,   0,   0, 0, 0, 0,  0
-Axis6p=2, 100,   0,   0, 0, 0, 0,  0
+Axis6n=2, -20,   0,   0, 0, 0, 0,  0
+Axis6p=2,  20,   0,   0, 0, 0, 0,  0
 Axis7n=0
 Axis7p=0
 Axis8n=0
@@ -48,8 +48,8 @@ Button10=0
 Button11=0
 Button12=0
 Button13=0
-Button14=0
-Button15=0
+Button14=2,   0,   0,   0, 0, 0, 1,  0
+Button15=2,   0,   0,   0, 1, 0, 0,  0
 Button16=0
 Button17=0
 Button18=0
